src/objects/Keyword__c.object
<CustomObject>
    <fields>
        <fullName>IsKeywordEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsKeywordEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tag</label>
        <referenceTo>Tag__c</referenceTo>
        <relationshipLabel>Keywords</relationshipLabel>
        <relationshipName>Keywords</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Keyword</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>KW-{0000}</displayFormat>
        <label>Keyword Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Keywords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>